--- a/home.html
+++ b/home.html
@@ -1,3 +1,10 @@
-<div margin="auto">
+<!DOCTYPE html>
+<html>
+<body>
+
+<div margin="auto" style=ba>
     <img src="website.jpg" width="1000"/>
 </div>
+
+</body>
+</html>
