--- a/home.html
+++ b/home.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+<style>
+    body { background-color: #f5f0ec; }
+</style>
 <body>
 
-<div margin="auto" style=ba>
+<container margin="auto">
     <img src="website.jpg" width="1000"/>
-</div>
+</container>
 
 </body>
 </html>
