--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 
 <container margin="auto">
     <img src="website.jpg" width="1000"/>
+    <img src="about.jpg" width="1000"/>
 </container>
 
 </body>
