--- a/home.html
+++ b/home.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
-<style>
-    body { background-color: #f5f0ec; }
-</style>
+<head>
+    <style>
+        body { background-color: #f5f0ec; }
+        .container {
+            margin: auto;
+            text-align: center; /* To center the images horizontally */
+        }
+    </style>
+</head>
 <body>
 
-<container margin="auto">
-    <img src="website.jpg" width="1000"/>
-    <img src="about.jpg" width="1000"/>
-</container>
+<div class="container">
+    <img src="website.jpg" width="1000" alt="Website Image"/>
+    <img src="about.jpg" width="1000" alt="About Image"/>
+</div>
 
 </body>
 </html>
