--- a/home.html
+++ b/home.html
@@ -12,7 +12,9 @@
 <body>
 
 <div class="container">
-    <img src="website.jpg" width="1000" alt="Website Image"/>
+    <img src="top.jpg" width="1000" alt="Website Image"/>
+    <img src="2.jpg" width="1000" alt="Website Image"/>
+    <img src="3.jpg" width="1000" alt="Website Image"/>
     <img src="about.jpg" width="1000" alt="About Image"/>
 </div>
 
