--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
 
 <div class="container">
     <img src="top.jpg" width="1000" alt="Website Image"/>
-    <img src="2.jpg" width="1000" alt="Website Image"/>
-    <img src="3.jpg" width="1000" alt="Website Image"/>
+    <img src="popup.jpg" width="1000" alt="Website Image"/>
+    <img src="menu.jpg" width="1000" alt="Website Image"/>
     <img src="about.jpg" width="1000" alt="About Image"/>
 </div>
 
