--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="container">
-    <img src="top_mini.jpg" width="1000" alt="Website Image"/>
+    <img src="top.jpg" width="1000" alt="Website Image"/>
     <a href="https://www.instagram.com/levandesourdough/">
         <img src="order.jpg" width="1000" alt="Website Image"/>
     </a>
