--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
 <div class="container">
     <img src="top.jpg" width="1000" alt="Website Image"/>
-    <a href="https://www.instagram.com/levandesourdough/">
+    <a href="https://www.hotplate.com/levandesourdough/fbf29783-771b-42a8-98d9-ced8c1b08a51">
         <img src="order.jpg" width="1000" alt="Website Image"/>
     </a>
     <img src="menu.jpg" width="1000" alt="Website Image"/>
