--- a/home.html
+++ b/home.html
@@ -19,6 +19,9 @@
     <a href="https://www.instagram.com/levandesourdough/">
         <img src="instagram.jpg" width="1000" alt="Website Image"/>
     </a>
+    <video>
+        <source src="popup.mp4" type="video/mp4">
+    </video>
     <img src="menu.jpg" width="1000" alt="Website Image"/>
     <img src="about.jpg" width="1000" alt="About Image"/>
 </div>
