--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <a href="https://www.instagram.com/levandesourdough/">
         <img src="instagram.jpg" width="1000" alt="Website Image"/>
     </a>
-    <video>
+    <video width="300">
         <source src="popup.mp4" type="video/mp4">
     </video>
     <img src="menu.jpg" width="1000" alt="Website Image"/>
