--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
     <a href="https://www.hotplate.com/levandesourdough/fbf29783-771b-42a8-98d9-ced8c1b08a51">
         <img src="order.jpg" width="1000" alt="Website Image"/>
     </a>
+    <img src="middle.jpg" width="1000" alt="Website Image"/>
     <a href="https://www.instagram.com/levandesourdough/">
         <img src="instagram.jpg" width="1000" alt="Website Image"/>
     </a>
